@@ -184,7 +184,7 @@ public class CuboidCartesianMatchEngine extends AbstractCartesianMatchEngine {
         }
 
         public Object getValue() {
-            return new Double( getError( idim_ ) );
+            return Double.valueOf( getError( idim_ ) );
         }
 
         public void setValue( Object value ) {
